# TeleFlow

./: .gitignore  README.md  RELEASE_NOTES.md  SPECIFICATION.md  main.py  pyproject.toml  teleflow.spec
.github/workflows/: build.yml  lint.yml
src/teleflow/: __init__.py  __main__.py
src/teleflow/core/: account_manager.py  chat_manager.py  dispatch.py  message_manager.py  scheduler.py  sender_engine.py
src/teleflow/core/storage/: db.py
src/teleflow/core/telegram/: client.py
src/teleflow/gui/: app.py  styles.py  tray_manager.py
src/teleflow/gui/components/: chat_list.py  message_editor.py  schedule_manager.py
src/teleflow/gui/windows/: app_lock.py  csv_import.py  csv_msg_import.py  dashboard.py  login.py  message_assignment.py  schedule_wizard.py  send_rules.py  settings.py
src/teleflow/i18n/: __init__.py  translator.py
src/teleflow/i18n/locales/: en.json  ru.json
src/teleflow/utils/: crypto.py  logger.py  password.py  qt_helpers.py
tests/: test_crypto.py  test_csv_import.py  test_scheduler.py
